# label-lab

./: .env.example  .gitignore  README.md  justfile  pyproject.toml
artifacts/: README.md
docs/: README.md  architecture.md  runbooks.md  source_formats.md
src/label_lab/: __init__.py  __main__.py  adjudication.py  main.py  models.py  release.py  release_contract.py
src/label_lab/sources/: __init__.py  anno_lab_raw.py  coco.py  contracts.py  labelme.py  registry.py  validation.py
tests/: test_adjudication.py  test_cli.py  test_release.py  test_sources.py
tests/fixtures/: demo_anno_lab_raw_export.json  demo_anno_lab_raw_repeated_measure_export.json  demo_anno_lab_raw_review_adjudication.json  demo_source_coco.json
tests/fixtures/demo_source_labelme/: scene_001.json  scene_002.json
tests/fixtures/published_release_bundle_v1/: annotations.coco.json  assets.parquet  categories.parquet  release_manifest.json
