[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "label-lab"
version = "0.1.0"
description = "Standalone framework for dataset ingestion, cleaning, conversion, and analysis."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "label-lab Maintainers"}]
dependencies = [
    "pyarrow>=18.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.18",
    "pytest>=8.4",
    "ruff>=0.12",
]

[project.scripts]
label-lab = "label_lab.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["label_lab"]
